# mersenne-twister

./: LICENSE  README.md  pyproject.toml
rng/: __init__.py
tests/: test_mt.py
