[tool.poetry]
name = "rng"
version = "0.1.0"
description = "A Mersenne Twister implementation"
authors = ["Mads Hansen Baattrup <45642693+mads-hb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
